Centre align correction

--- a/src/styles/skills.scss
+++ b/src/styles/skills.scss
@@ -51,7 +51,7 @@
 }
 
 .logo-container {
-  max-width: 1200px;
+  max-width: 1400px;
  // margin-left: 50px;
   margin-bottom: 250px;
 
